# todo-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  config.py  docker-compose.yml  fly.toml  main.py  pyproject.toml
.claude/commands/: todo.md
agent/: buyer_graph.py  classifier.py  graph.py  state.py  task_agent.py  time_parser.py
agent/nodes/: buyer.py  hackernews.py  indiehackers.py  producthunt.py  reddit.py  synthesize.py
bot/handlers/: commands.py  idea.py
bot/integrations/: github.py
bot/jobs/: buyer.py  discovery.py  memory.py  notifier.py  reminders.py
dashboard/: .gitignore  Dockerfile  package-lock.json  package.json
dashboard/app/: layout.tsx  loading.tsx  page.tsx
dashboard/app/api/tasks/: route.ts
dashboard/components/: refresh-button.tsx  score-badge.tsx  task-detail.tsx  tasks-table.tsx  theme-toggle.tsx
dashboard/lib/: api.ts
data-api/: database.py  main.py  requirements.txt
db/: client.py  database.py  models.py
memory-agent/: extractor.py  graph_client.py  main.py  mcp_server.py  requirements.txt
tests/: test_db.py  test_nodes.py  test_pipeline.py  test_task_agent_mock.py
